--- a/软件设计师/基础知识.md
+++ b/软件设计师/基础知识.md
@@ -39,7 +39,7 @@
 |  1   |  必答题  |   数据流图DFD    | 补充数据流图外部实体<br/>补充数据流图数据存储<br/>补充数据流（名称、起点、终点）<br/>数据流图的改错（较少考察，包括数据流错误、删除多余数据流）<br/>数据流图相关概念简答 |
 |  2   |  必答题  |    数据库设计    | 补充ER图：<br/>E-R图转换为关系模式<br/>主键和外键、新增联系判断 |
 |  3   |  必答题  |     UML建模      | 用例图（联系类型，参与者）<br/>类图和对象图（多重度，联系类型）<br/>顺序图（补充对象名和消息名）<br/>活动图（补充活动名，分岔线用途）<br/>状态图（补充状态，状态转换条件）<br/>通信图（补充对象名，消息名） |
-|  4   |  必答题  |    C算法设计     | 各种经典算法设计和数据结构，如链表、栈、二叉树操作算法、KMP算法等<br/>算法类型（动态规划法、分治法、回溯法、递归法、贪心法<br/>时间、空间复杂度<br/>给定输入求输出 |
+|  4   |  必答题  |  C语言算法设计   | 各种经典算法设计和数据结构，如链表、栈、二叉树操作算法、KMP算法等<br/>算法类型（动态规划法、分治法、回溯法、递归法、贪心法<br/>时间、空间复杂度<br/>给定输入求输出 |
 |  5   |  选答题  | C++语言程序设计  |         C++语法（只考简单语法，不考算法）+ 设计模式          |
 |  6   |  选答题  | Java语言程序设计 |         Java语法（只考简单语法，不考算法）+ 设计模式         |
 
