--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -38,6 +38,8 @@
 
 `str.compare(a, b, str2, c, d)`	比较str1指定字串与str2指定字串是否相等，`a`, `b`, `c`, `d`均可省略
 
+`next_permutation(str.begin(), str.end())`    全排列
+
 ### 0.4 位运算
 
 | 符号 |   规则   |
@@ -95,9 +97,15 @@
 
 `count_if(vec.begin(), vec.end(), cmp)`
 
-==去除容器中相邻元素的重复元素== :  
+==去除容器中相邻元素的重复元素==:  
 
 `ModuleArr.erase(unique(ModuleArr.begin(), ModuleArr.end()), ModuleArr.end());`
+
+==下一个排列==: 
+
+`next_permutation(vec.begin(), vec.end())`
+
+返回值为bool类型, 成功为true
 
 ### 0.6 二进制相关
 
