--- a/面经/.~C++面经-冲突-Prokyon_Win10.md
+++ b/面经/.~C++面经-冲突-Prokyon_Win10.md
@@ -66,20 +66,18 @@ int main(int argc, char ** argv)
 第三题:
 
 ```c
-int main()
-{  
-    int i = 2;  
-    int result = 0;  
-    switch (i) 
-    {  
-        case 1:  
-            result = result + i;  
-        case 2:  
-            result = result + i * 2;  
-        case 3:  
-            result = result + i * 3;  
-    }  
-}  
+1.    int main(){  
+2.        int i = 2;  
+3.        int result = 0;  
+4.        switch (i) {  
+5.            case 1:  
+6.                result = result + i;  
+7.            case 2:  
+8.                result = result + i * 2;  
+9.            case 3:  
+10.                result = result + i * 3;  
+11.        }  
+12.    }  
 ```
 
 **A**: 就`switch`语句嘛，`i`判断为2，程序运行到7处然后就结束了。
@@ -331,25 +329,23 @@ data.str : C Programming
 #include <stdio.h>
 #include <string.h>
 
-union Data
-{
+union Data{
    int i;
    float f;
    char  str[20];
 };
 
-int main()
-{
+int main( ){
    union Data data;        
 
    data.i = 10;
-   printf("data.i : %d\n", data.i);
+   printf( "data.i : %d\n", data.i);
 
    data.f = 220.5;
-   printf("data.f : %f\n", data.f);
+   printf( "data.f : %f\n", data.f);
 
    strcpy( data.str, "C Programming");
-   printf("data.str : %s\n", data.str);
+   printf( "data.str : %s\n", data.str);
 
    return 0;
 }
@@ -17626,11 +17622,11 @@ linux对于文件描述符的限制有3个级别
 
    3. **如何解决**：
 
-      1. ==资源一次性分配==，从而解决请求保持的问题
+      1. 资源一次性分配，从而解决请求保持的问题
 
-      2. ==可剥夺资源==：当进程新的资源未得到满足时，释放已有的资源
+      2. 可剥夺资源：当进程新的资源未得到满足时，释放已有的资源
 
-      3. ==资源有序分配==：资源按序号递增，进程请求按递增请求，释放则相反
+      3. 资源有序分配：资源按序号递增，进程请求按递增请求，释放则相反
 
 9. 简述互斥锁的机制，互斥锁与读写的区别？⭐⭐⭐⭐⭐
 
@@ -17638,123 +17634,123 @@ linux对于文件描述符的限制有3个级别
 
    2. **互斥锁和读写锁**：
 
-      1. ==读写锁区分读者和写者，而互斥锁不区分==
+      1. 读写锁区分读者和写者，而互斥锁不区分
 
-      2. 互斥锁同一时间只允许一个线程访问该对象，无论读写；==读写锁同一时间内只允许一个写者，但是允许多个读者同时读对象==
+      2. 互斥锁同一时间只允许一个线程访问该对象，无论读写；读写锁同一时间内只允许一个写者，但是允许多个读者同时读对象
 
 10. 简述自旋锁和互斥锁的使用场景⭐⭐⭐⭐⭐
 
     1. **互斥锁**用于临界区持锁时间比较长的操作，比如下面这些情况都可以考虑
-       1. 临界区有IO操作
-       2. 临界区代码复杂或者循环量大
-       3. 临界区竞争非常激烈
-       4. 单核处理器
 
-    
-    2. **自旋锁就**主要用在临界区持锁时间非常短且CPU资源不紧张的情况下
-    
+    　　1. 临界区有IO操作
+
+    　　2. 临界区代码复杂或者循环量大
+
+    　　3. 临界区竞争非常激烈
+
+    　　4. 单核处理器
+
+    1. **自旋锁就**主要用在临界区持锁时间非常短且CPU资源不紧张的情况下
+
 11. 公平锁与非公平锁⭐⭐⭐⭐⭐
 
-    1. **公平锁**：就是很公平，在并发环境中，每个线程在获取锁时会先查看此锁维护的等待队列，如果为空，或者当前线程是等待队列的第一个，就占有锁，否则就会加入到等待队列中，以后会按照FIFO的规则从队列中取到自己
-    2. **非公平锁**：非公平锁比较粗鲁，上来就直接尝试占有锁，如果尝试失败，就再采用类似公平锁那种方式
-       ==非公平锁的优点在于吞吐量比公平锁大==
+    **公平锁**：就是很公平，在并发环境中，每个线程在获取锁时会先查看此锁维护的等待队列，如果为空，或者当前线程是等待队列的第一个，就占有锁，否则就会加入到等待队列中，以后会按照FIFO的规则从队列中取到自己
+    **非公平锁**：非公平锁比较粗鲁，上来就直接尝试占有锁，如果尝试失败，就再采用类似公平锁那种方式
+    非公平锁的优点在于吞吐量比公平锁大
 
 12. 死锁与活锁⭐⭐⭐⭐⭐
 
-    1. **==死锁==**：是指两个或两个以上的进程(或线程)在执行过程中，因争夺资源而造成的一种互相等待的现象，若无外力作用，它们都将无法推进下去。此时称系统处于死锁状态或系统产生了死锁，这些永远在互相等待的进程称为死锁进程
-    2. **==活锁==**：是指线程1可以使用资源，但它很礼貌，让其他线程先使用资源，线程2也可以使用资源，但它很绅士，也让其他线程先使用资源。==这样你让我，我让你，最后两个线程都无法使用资源==
+    **死锁**：是指两个或两个以上的进程(或线程)在执行过程中，因争夺资源而造成的一种互相等待的现象，若无外力作用，它们都将无法推进下去。此时称系统处于死锁状态或系统产生了死锁，这些永远在互相等待的进程称为死锁进程
+    **活锁**：是指线程1可以使用资源，但它很礼貌，让其他线程先使用资源，线程2也可以使用资源，但它很绅士，也让其他线程先使用资源。这样你让我，我让你，最后两个线程都无法使用资源
 
 13. 说说sleep和wait的区别？⭐⭐⭐
 
-    1. `sleep`是一个延时函数，让进程或线程进入休眠。休眠完毕后继续运行
+    1. sleep是一个延时函数，让进程或线程进入休眠。休眠完毕后继续运行
 
-    2. `wait`是父进程回收子进程`PCB(Process Control Block)`资源的一个系统调用
+    2. wait是父进程回收子进程PCB(Process Control Block)资源的一个系统调用
 
 14. 请介绍一下5种IO模型⭐⭐⭐⭐⭐
 
-    **IO**(Input/Output，输入/输出)即数据的读取(接收)或写入(发送)操作
-    通常用户进程中的一个完整IO分为两阶段：用户进程空间与内核空间之间的相互切换、内核空间与设备空间的相互切换(磁盘、网络等)。我们通常说的IO是指**网络IO**和**磁盘IO**两种
-    Linux中进程无法直接操作I/O设备，其必须通过**系统调用**请求内核来协助完成I/O动作；内核会为每个I/O设备维护一个缓冲区
-    对于一个输入操作来说，进程IO**系统调用**后，内核会先看缓冲区中有没有相应的缓存数据，没有的话再到设备中读取，因为设备IO一般速度较慢，需要等待；内核缓冲区有数据则直接复制到进程空间
+    **IO**(Input/Output，输入/输出)即数据的读取(接收)或写入(发送)操作。
+    通常用户进程中的一个完整IO分为两阶段：用户进程空间与内核空间之间的相互切换、内核空间与设备空间的相互切换(磁盘、网络等)。我们通常说的IO是指**网络IO**和**磁盘IO**两种。
+    Linux中进程无法直接操作I/O设备，其必须通过**系统调用**请求内核来协助完成I/O动作；内核会为每个I/O设备维护一个缓冲区。
+    对于一个输入操作来说，进程IO**系统调用**后，内核会先看缓冲区中有没有相应的缓存数据，没有的话再到设备中读取，因为设备IO一般速度较慢，需要等待；内核缓冲区有数据则直接复制到进程空间。
     所以，对于一个网络输入操作通常包括两个不同阶段：
 
-    1. 等待网络数据到达网卡→读取到内核缓冲区，数据准备好
-    2. 从内核缓冲区复制数据到进程空间
+    1. 等待网络数据到达网卡→读取到内核缓冲区，数据准备好；
+    2. 从内核缓冲区复制数据到进程空间。
 
     5种IO模型如下：
 
-    1. **==阻塞IO==**：进程发起IO**系统调用**后，进程被阻塞，转到内核空间处理，整个IO处理完毕后返回进程。操作成功则进程获取到数据。调用者将一直等待，不停的检查这个函数有没有返回，必须等这个函数返回后才能进行下一步动作
-    2. **==非阻塞IO==**：进程发起IO**系统调用**后，进程被阻塞，内核数据还没好，不想让进程等待，就返回一个错误，这样进程就不阻塞了。进程每隔一段时间就发起IO系统调用去检查IO事件是否就绪。这样就实现非阻塞了。每个进程都有一个时间片，轮询的时候读取IO，时间片到了就要换另一个进程做其他事情了，这样就做到了每隔一段时间发起IO系统调用
-    3. **==IO多路复用==**：Linux用select/poll函数实现IO复用模型，这两个函数也会使进程阻塞，但是和阻塞IO所不同的是这两个函数可以同时阻塞多个IO操作。而且可以同时对多个读操作、写操作的IO函数进行检查。select/poll会监听所有的IO，直到有数据可读或可写时，才真正调用IO操作函数
-    4. **==信号驱动IO==**：Linux用套接口进行信号驱动IO，安装一个信号处理函数，进程继续运行并不阻塞，当IO事件就绪，进程收到SIGIO信号，然后处理IO事件。这个好理解，这个信号直接通知进程数据到了
-    5. **==异步IO==**：进程发起IO**系统调用**后立即返回，**当内核将数据拷贝到缓冲区后，再通知应用程序。用户可以直接去使用数据**。具体操作是进程调用aio_read函数告诉内核描述字缓冲区指针和缓冲区的大小、文件偏移及通知的方式，然后立即返回
+    1. **阻塞IO**：进程发起IO**系统调用**后，进程被阻塞，转到内核空间处理，整个IO处理完毕后返回进程。操作成功则进程获取到数据。调用者将一直等待，不停的检查这个函数有没有返回，必须等这个函数返回后才能进行下一步动作。
+    2. **非阻塞IO**：进程发起IO**系统调用**后，进程被阻塞，内核数据还没好，不想让进程等待，就返回一个错误，这样进程就不阻塞了。进程每隔一段时间就发起IO系统调用去检查IO事件是否就绪。这样就实现非阻塞了。每个进程都有一个时间片，轮询的时候读取IO，时间片到了就要换另一个进程做其他事情了，这样就做到了每隔一段时间发起IO系统调用。
+    3. **IO多路复用**：Linux用select/poll函数实现IO复用模型，这两个函数也会使进程阻塞，但是和阻塞IO所不同的是这两个函数可以同时阻塞多个IO操作。而且可以同时对多个读操作、写操作的IO函数进行检查。select/poll会监听所有的IO，直到有数据可读或可写时，才真正调用IO操作函数。
+    4. **信号驱动IO**：Linux用套接口进行信号驱动IO，安装一个信号处理函数，进程继续运行并不阻塞，当IO事件就绪，进程收到SIGIO信号，然后处理IO事件。这个好理解，这个信号直接通知进程数据到了。
+    5. **异步IO**：进程发起IO**系统调用**后立即返回，**当内核将数据拷贝到缓冲区后，再通知应用程序。用户可以直接去使用数据**。具体操作是进程调用aio_read函数告诉内核描述字缓冲区指针和缓冲区的大小、文件偏移及通知的方式，然后立即返回。
 
-    前四种属于同步IO，原因就在于==进程发起IO**系统调用**读取数据时，这个真正拿到数据的过程依然是阻塞的==，直到完成数据读取还要把数据拷贝到用户空间中，进程才能继续做其他事
-    而异步IO就不一样了，==进程完全做自己的事情，数据都不需要它读取==，而是由内核读取数据并将数据拷贝到缓冲区后，再通知应用程序。用户可以直接去使用数据
+    前四种属于同步IO，原因就在于进程发起IO**系统调用**读取数据时，这个真正拿到数据的过程依然是阻塞的，直到完成数据读取还要把数据拷贝到用户空间中，进程才能继续做其他事。
+    而异步IO就不一样了，进程完全做自己的事情，数据都不需要它读取，而是由内核读取数据并将数据拷贝到缓冲区后，再通知应用程序。用户可以直接去使用数据。
 
 15. 简述同步与异步的区别，阻塞与非阻塞的区别？⭐⭐⭐⭐⭐
 
     1. **同步与异步的区别**：
 
-       * **==同步==**：所有的操作都做完，才返回给用户结果。即**写完数据库**之后，**再响应用户**，用户体验不好。双方的动作是经过双方协调的，步调一致的
+       **同步**：所有的操作都做完，才返回给用户结果。即**写完数据库**之后，**再响应用户**，用户体验不好。双方的动作是经过双方协调的，步调一致的。
 
-       * **==异步==**：不用等所有操作都做完，就响应用户请求。即**先响应用户请求**，然后**慢慢去写数据库**，用户体验较好。双方并不需要协调，都可以随意进行各自的操作
+       **异步**：不用等所有操作都做完，就响应用户请求。即**先响应用户请求**，然后**慢慢去写数据库**，用户体验较好。双方并不需要协调，都可以随意进行各自的操作。
 
     2. **阻塞与非阻塞的区别**：
 
-       * **==阻塞==**：调用者调用了某个函数，等待这个函数返回，期间什么也不做，不停的检查这个函数有没有返回，必须等这个函数返回后才能进行下一步动作
+       **阻塞**：调用者调用了某个函数，等待这个函数返回，期间什么也不做，不停的检查这个函数有没有返回，必须等这个函数返回后才能进行下一步动作。
 
-       * **==非阻塞==**：非阻塞等待，每隔一段时间就去检查IO事件是否就绪。没有就绪就可以做其他事情
+       **非阻塞**：非阻塞等待，每隔一段时间就去检查IO事件是否就绪。没有就绪就可以做其他事情。
 
 16. BIO、NIO有什么区别？⭐⭐⭐⭐⭐
 
     **BIO、NIO的区别**：
 
-    ==**BIO(Blocking I/O)**：**阻塞IO**==
+    **BIO(Blocking I/O)**：**阻塞IO**。进程发起IO**系统调用**后，进程被阻塞，转到内核空间处理，整个IO处理完毕后返回进程。操作成功则进程获取到数据。调用者将一直等待，不停的检查这个函数有没有返回，必须等这个函数返回后才能进行下一步动作。
 
-    进程发起IO**系统调用**后，进程被阻塞，转到内核空间处理，整个IO处理完毕后返回进程。操作成功则进程获取到数据。调用者将一直等待，不停的检查这个函数有没有返回，必须等这个函数返回后才能进行下一步动作
-
-    ==**NIO(New I/O)**：**同时支持阻塞与非阻塞模式**==
-
-    NIO的做法是叫一个线程不断的轮询每个IO的状态，看看是否有IO的状态发生了改变，从而进行下一步的操作
+    **NIO(New I/O)**：**同时支持阻塞与非阻塞模式**，NIO的做法是叫一个线程不断的轮询每个IO的状态，看看是否有IO的状态发生了改变，从而进行下一步的操作。
 
 17. 说说多路IO复用技术有哪些，区别是什么？⭐⭐⭐⭐⭐
 
-    1. **`select`，`poll`，`epoll`**都是IO多路复用的机制，I/O多路复用就是通过一种机制，可以监视多个文件描述符，一旦某个文件描述符就绪(一般是读就绪或者写就绪)，能够通知应用程序进行相应的读写操作
+    1. **select，poll，epoll**都是IO多路复用的机制，I/O多路复用就是通过一种机制，可以监视多个文件描述符，一旦某个文件描述符就绪(一般是读就绪或者写就绪)，能够通知应用程序进行相应的读写操作。
 
     2. **区别**：
 
-       1. `poll`与`select`不同，通过一个`pollfd`数组向内核传递需要关注的事件，故没有描述符个数的限制，`pollfd`中的`events`字段和`revents`分别用于标示关注的事件和发生的事件，故`pollfd`数组只需要被初始化一次
+       1. poll与select不同，通过一个pollfd数组向内核传递需要关注的事件，故没有描述符个数的限制，pollfd中的events字段和revents分别用于标示关注的事件和发生的事件，故pollfd数组只需要被初始化一次。
 
-       2. `select`，`poll`实现需要自己不断轮询所有fd集合，直到设备就绪，期间可能要睡眠和唤醒多次交替。而`epoll`只要判断一下就绪链表是否为空就行了，这节省了大量的CPU时间
+       2. select，poll实现需要自己不断轮询所有fd集合，直到设备就绪，期间可能要睡眠和唤醒多次交替。而epoll只要判断一下就绪链表是否为空就行了，这节省了大量的CPU时间。
 
-       3. `select`，`poll`每次调用都要把`fd`集合从用户态往内核态拷贝一次，并且要把当前进程往设备等待队列中挂一次，而`epoll`只要一次拷贝，而且把当前进程往等待队列上挂也只挂一次，这也能节省不少的开销
+       3. select，poll每次调用都要把fd集合从用户态往内核态拷贝一次，并且要把当前进程往设备等待队列中挂一次，而epoll只要一次拷贝，而且把当前进程往等待队列上挂也只挂一次，这也能节省不少的开销。
 
-18. 说说`epoll`的原理⭐⭐⭐⭐⭐
+18. 说说epoll的原理⭐⭐⭐⭐⭐
 
-    `epoll`提供了三个函数，`epoll_create`、`epoll_ctl`和`epoll_wait`
-    首先创建一个`epoll`对象，然后使用`epoll_ctl`对这个对象进行操作(添加、删除、修改)，把需要监控的描述符加进去，这些描述符将会以**`epoll_event`结构体**的形式组成一颗**红黑树**，接着阻塞在**`epoll_wait`**，进入大循环，当某个`fd`上有事件发生时，内核将会把其对应的结构体放入一个**链表**中，返回有事件发生的链表
+    epoll提供了三个函数，epoll_create、epoll_ctl和epoll_wait。
+    首先创建一个epoll对象，然后使用epoll_ctl对这个对象进行操作(添加、删除、修改)，把需要监控的描述符加进去，这些描述符将会以**epoll_event结构体**的形式组成一颗**红黑树**，接着阻塞在**epoll_wait**，进入大循环，当某个fd上有事件发生时，内核将会把其对应的结构体放入一个**链表**中，返回有事件发生的链表。
 
-19. ==简述`epoll`和`select`的区别，`epoll`为什么高效？==⭐⭐⭐⭐⭐
+19. 简述epoll和select的区别，epoll为什么高效？⭐⭐⭐⭐⭐
 
     1. **区别**：
-       1. 每次调用`select`，都需要把`fd`集合从用户态拷贝到内核态，这个开销在`fd`很多时会很大；而`epoll`保证了每个fd在整个过程中只会拷贝一次
-       
-       2. 每次调用`select`都需要在内核遍历传递进来的所有fd；而`epoll`只需要轮询一次`fd`集合，同时查看就绪链表中有没有就绪的`fd`就可以了
-       
-       3. `select`支持的文件描述符数量太小了，默认是1024；而`epoll`没有这个限制，它所支持的`fd`上限是最大可以打开文件的数目，这个数字一般远大于2048
-       
+
+       1. 每次调用select，都需要把fd集合从用户态拷贝到内核态，这个开销在fd很多时会很大；而epoll保证了每个fd在整个过程中只会拷贝一次。
+
+       2. 每次调用select都需要在内核遍历传递进来的所有fd；而epoll只需要轮询一次fd集合，同时查看就绪链表中有没有就绪的fd就可以了。
+
+       3. select支持的文件描述符数量太小了，默认是1024；而epoll没有这个限制，它所支持的fd上限是最大可以打开文件的数目，这个数字一般远大于2048。
+
     2. **epoll为什么高效**：
-    
-       1. `select`，`poll`实现需要自己不断轮询所有fd集合，直到设备就绪，期间可能要睡眠和唤醒多次交替。而`epoll`只要判断一下==就绪链表是否为空==就行了，这节省了大量的CPU时间
-    
-       2. `select`，`poll`每次调用都要把fd集合从用户态往内核态拷贝一次，并且要把当前进程往设备等待队列中挂一次，而`epoll`==只要一次拷贝，而且把当前进程往等待队列上挂也只挂一次==，这也能节省不少的开销
-    
-20. `epoll`水平触发与边缘触发的区别？⭐⭐⭐⭐⭐
 
-    * LT模式(水平触发)下，==只要这个fd还有数据可读==，每次 `epoll_wait`都会返回它的事件，提醒用户程序去操作
+       1. select，poll实现需要自己不断轮询所有fd集合，直到设备就绪，期间可能要睡眠和唤醒多次交替。而epoll只要判断一下就绪链表是否为空就行了，这节省了大量的CPU时间。
 
-    * ET(边缘触发)模式中，它==只会提示一次==，直到下次再有数据流入之前都不会再提示了，无论`fd`中是否还有数据可读
+       2. select，poll每次调用都要把fd集合从用户态往内核态拷贝一次，并且要把当前进程往设备等待队列中挂一次，而epoll只要一次拷贝，而且把当前进程往等待队列上挂也只挂一次，这也能节省不少的开销。
+
+20. epoll水平触发与边缘触发的区别？⭐⭐⭐⭐⭐
+
+    LT模式(水平触发)下，只要这个fd还有数据可读，每次 epoll_wait都会返回它的事件，提醒用户程序去操作；
+
+    而在ET(边缘触发)模式中，它只会提示一次，直到下次再有数据流入之前都不会再提示了，无论fd中是否还有数据可读。
 
 ### 计算机网络
 
@@ -17854,17 +17850,18 @@ linux对于文件描述符的限制有3个级别
 
 2. TCP与UDP的区别？⭐⭐⭐⭐⭐
 
-   1. TCP需要建立一对一稳定连接；UDP无连接
+   (1)TCP需要建立一对一稳定连接；UDP无连接
 
-   2. TCP一对一；UDP可以一对一、一对多、多对多
+   (2)TCP一对一；UDP可以一对一、一对多、多对多
 
-   3. TCP可靠传输，序列号、确认应答、超时重传；UDP不保证可靠传输，尽最大努力交付
-   3. TCP头部字节20字节；UDP8个字节
-   
-   5. TCP开销大；UDP灵活开销小
-   
-   6. TCP提供可靠的服务，适用于通讯质量要求高的场景；UDP传输效率高，适用于高速传输和实时性要求的场景。
-   
+   (3)TCP可靠传输，序列号、确认应答、超时重传；UDP不保证可靠传输，尽最大努力交付
+
+   (4)TCP头部字节20字节；UDP8个字节
+
+   (5)TCP开销大；UDP灵活开销小
+
+   (6)TCP提供可靠的服务，适用于通讯质量要求高的场景；UDP传输效率高，适用于高速传输和实时性要求的场景。
+
 3. TCP头部包含哪些内容？⭐⭐⭐⭐
 
    TCP头部如图：
@@ -17938,7 +17935,7 @@ linux对于文件描述符的限制有3个级别
 
    2. 或者采用**SYN cookie设置**，就是给每一个请求连接的IP地址分配一个Cookie，如果短时间内连续受到某个IP的重复SYN报文，就认定是受到了攻击，以后从这个IP地址来的包会被丢弃。Cookie是当浏览某网站时，由Web服务器置于硬盘上一个非常小的文本文件，用来记录用户ID，密码，浏览过的网页，停留时间等信息。当我们认为受到了攻击，合理的采用***设置等外部网络进行拦截。
 
-   3. **使用长连接**。在使用长连接的情况下，当一个网页打开完成后，客户端和服务器之间用于传输HTTP数据的 TCP连接不会关闭，如果客户端再次访问这个服务器上的网页，会继续使用这一条已经建立的连接。
+   **使用长连接**。在使用长连接的情况下，当一个网页打开完成后，客户端和服务器之间用于传输HTTP数据的 TCP连接不会关闭，如果客户端再次访问这个服务器上的网页，会继续使用这一条已经建立的连接。
 
 10. 说说TCP的linux系统设置参数⭐⭐⭐
 
@@ -17954,23 +17951,22 @@ linux对于文件描述符的限制有3个级别
     1. 针对于大量短连接同时高并发的情况：
        最常用的一个手段就是优化主机系统设置。
 
-       1. 比如**降低SYN timeout时间**，使得主机尽快释放半连接的占用。
+       (1)比如**降低SYN timeout时间**，使得主机尽快释放半连接的占用。
 
-       2. 或者采用**SYN cookie设置**，就是给每一个请求连接的IP地址分配一个Cookie，如果短时间内连续受到某个IP的重复SYN报文，就认定是受到了攻击，以后从这个IP地址来的包会被丢弃。Cookie是当浏览某网站时，由Web服务器置于硬盘上一个非常小的文本文件，用来记录用户ID，密码，浏览过的网页，停留时间等信息。当我们认为受到了攻击，合理的采用***设置等外部网络进行拦截。
+       (2)或者采用**SYN cookie设置**，就是给每一个请求连接的IP地址分配一个Cookie，如果短时间内连续受到某个IP的重复SYN报文，就认定是受到了攻击，以后从这个IP地址来的包会被丢弃。Cookie是当浏览某网站时，由Web服务器置于硬盘上一个非常小的文本文件，用来记录用户ID，密码，浏览过的网页，停留时间等信息。当我们认为受到了攻击，合理的采用***设置等外部网络进行拦截。
 
-       3. **使用长连接**。在使用长连接的情况下，当一个网页打开完成后，客户端和服务器之间用于传输HTTP数据的 TCP连接不会关闭，如果客户端再次访问这个服务器上的网页，会继续使用这一条已经建立的连接。
+       (3)**使用长连接**。在使用长连接的情况下，当一个网页打开完成后，客户端和服务器之间用于传输HTTP数据的 TCP连接不会关闭，如果客户端再次访问这个服务器上的网页，会继续使用这一条已经建立的连接。
 
     2. 而针对于**服务器高并发**的场景，有以下处理手段：
-       
-       1. 采用多IO复用模型，如select、epoll，甚至采用异步IO
-       
-       2. 采用队列进行削峰、缓存
-       
-       3. 采用多服务器负载均衡手段
-       
-       4. 数据库层面我们可以采用分库分表、读写分离等措施。
-       
-       5. 还可以采用缓存的方式
+       (1)采用多IO复用模型，如select、epoll，甚至采用异步IO
+
+       (2)采用队列进行削峰、缓存
+
+       (3)采用多服务器负载均衡手段
+
+       (4)数据库层面我们可以采用分库分表、读写分离等措施。
+
+       (5)还可以采用缓存的方式
 
 12. 说说TCP的可靠机制。⭐⭐⭐⭐⭐
 
@@ -17986,13 +17982,13 @@ linux对于文件描述符的限制有3个级别
     3. **拥塞控制**
        如果把窗口定的很大，发送端连续发送大量的数据，可能造成网络的拥堵。为了防止拥堵，进行拥塞控制。
 
-       1. **慢启动**：定义拥塞窗口，一开始将该窗口大小设为1，之后每次收到一次确认应答(**一次成功来回传输**)，将拥塞窗口大小*2
+       (1)**慢启动**：定义拥塞窗口，一开始将该窗口大小设为1，之后每次收到一次确认应答(**一次成功来回传输**)，将拥塞窗口大小*2
 
-       2. **拥塞避免**：设置慢启动阈值，一般开始都设为65536。拥塞避免是只当拥塞窗口大小达到这个阈值，拥塞窗口的值不再指数上升，而是+1
+       (2)**拥塞避免**：设置慢启动阈值，一般开始都设为65536。拥塞避免是只当拥塞窗口大小达到这个阈值，拥塞窗口的值不再指数上升，而是+1
 
-       3. **快恢复**：将报文段的超时重传看做拥塞，则一旦发生超时重传，我们就将阈值设为当前窗口大小的一半，并且窗口大小变为1，重新进入慢启动过程
+       (3)**快恢复**：将报文段的超时重传看做拥塞，则一旦发生超时重传，我们就将阈值设为当前窗口大小的一半，并且窗口大小变为1，重新进入慢启动过程
 
-       4. **快速重传**：3次重复确认应答，立即重传。
+       (4)**快速重传**：3次重复确认应答，立即重传。
 
 13. 请说说TCP的ACK机制，有什么好处？⭐⭐⭐⭐⭐
 
@@ -18014,32 +18010,31 @@ linux对于文件描述符的限制有3个级别
     3. **拥塞控制**
        如果把窗口定的很大，发送端连续发送大量的数据，可能造成网络的拥堵。为了防止拥堵，进行拥塞控制。
 
-       1. **慢启动**：定义拥塞窗口，一开始将该窗口大小设为1，之后每次收到一次确认应答(**一次成功来回传输**)，将拥塞窗口大小*2
+       (1)**慢启动**：定义拥塞窗口，一开始将该窗口大小设为1，之后每次收到一次确认应答(**一次成功来回传输**)，将拥塞窗口大小*2
 
-       2. **拥塞避免**：设置慢启动阈值，一般开始都设为65536。拥塞避免是只当拥塞窗口大小达到这个阈值，拥塞窗口的值不再指数上升，而是+1
+       (2)**拥塞避免**：设置慢启动阈值，一般开始都设为65536。拥塞避免是只当拥塞窗口大小达到这个阈值，拥塞窗口的值不再指数上升，而是+1
 
-       3. **快恢复**：将报文段的超时重传看做拥塞，则一旦发生超时重传，我们就将阈值设为当前窗口大小的一半，并且窗口大小变为1，重新进入慢启动过程
+       (3)**快恢复**：将报文段的超时重传看做拥塞，则一旦发生超时重传，我们就将阈值设为当前窗口大小的一半，并且窗口大小变为1，重新进入慢启动过程
 
-       4. **快速重传**：3次重复确认应答，立即重传。
+       (4)**快速重传**：3次重复确认应答，立即重传。
 
 15. 什么是负载均衡？⭐⭐⭐⭐⭐
 
     当一台服务器的单位时间内的访问量越大时，服务器压力就越大，大到超过自身承受能力时，服务器就会崩溃。为了避免服务器崩溃，让用户有更好的体验，我们通过负载均衡的方式来分担服务器压力。
     **什么是负载均衡**：我们可以建立很多很多服务器，组成一个服务器集群，当用户访问网站时，先访问一个中间服务器，再让这个中间服务器在服务器集群中选择一个压力较小的服务器，然后将该访问请求引入该服务器。如此以来，用户的每次访问，都会保证服务器集群中的每个服务器压力趋于平衡，分担了服务器压力，避免了服务器崩溃的情况。
     **负载均衡有几种方式实现**
-
-    1. 轮询(默认)
-       请求依次轮流往每个应用服务器上进行分配，分配策略比较简单。
-       缺点：不均匀，可能会出现，某些服务器接受的请求较重，负载压力重，有些负荷小，不可控。另外服务器之间需要进行session同步。
-    2. 权重轮询(权重越高，进入的几率越大)
-       优点：可以根据情况进行调整。可控，仍然需要进行session同步。
-    3. IP-Hash
-       优点：采用hash的方式来映射服务器。无需进行session同步，固定IP会固定访问一台服务器。
-       缺点：恶意攻击，会造成某台服务器压垮。提供的服务不同，面向的地区不同，IP可能会出现集中，造成不均匀，不可控
-    4. Fair
-       这种相当于自适应，会根据服务器处理请求的速度进行负载均衡分配。处理请求最早结束的，拿到下一个请求。看上去是不是很好。但是一般都不使用，说是考虑到网络不稳定因素。还有待研究。这种也需要进行session同步。
-    5. URL-Hash
-       这种是根据URL进行hash，这样某些请求永远打某台服务器。利于利用服务器的缓存，但是可能由于URL的哈希值分布不均匀，以及业务侧重造成某些服务器压力大，某些负荷低。这种也需要进行session同步。
+    (1)轮询(默认)
+    请求依次轮流往每个应用服务器上进行分配，分配策略比较简单。
+    缺点：不均匀，可能会出现，某些服务器接受的请求较重，负载压力重，有些负荷小，不可控。另外服务器之间需要进行session同步。
+    (2)权重轮询(权重越高，进入的几率越大)
+    优点：可以根据情况进行调整。可控，仍然需要进行session同步。
+    (3)IP-Hash
+    优点：采用hash的方式来映射服务器。无需进行session同步，固定IP会固定访问一台服务器。
+    缺点：恶意攻击，会造成某台服务器压垮。提供的服务不同，面向的地区不同，IP可能会出现集中，造成不均匀，不可控。
+    (4)Fair
+    这种相当于自适应，会根据服务器处理请求的速度进行负载均衡分配。处理请求最早结束的，拿到下一个请求。看上去是不是很好。但是一般都不使用，说是考虑到网络不稳定因素。还有待研究。这种也需要进行session同步。
+    (5)URL-Hash
+    这种是根据URL进行hash，这样某些请求永远打某台服务器。利于利用服务器的缓存，但是可能由于URL的哈希值分布不均匀，以及业务侧重造成某些服务器压力大，某些负荷低。这种也需要进行session同步。
 
 16. Session和cookie的区别？⭐⭐⭐⭐⭐
 
@@ -18056,15 +18051,15 @@ linux对于文件描述符的限制有3个级别
     而 Session 的出现正是为了解决这个问题。同一个客户端每次和服务端交互时，不需要每次都传回所有的 Cookie 值，而是只要传回一个 ID，这个 ID 是客户端第一次访问服务器的时候生成的， 而且每个客户端是唯一的。这样每个客户端就有了一个唯一的 ID，客户端只要传回这个 ID 就行了，这个 ID 通常是 NANE 为JSESIONID 的一个 Cookie。
     **区别**：
 
-    1. 数据存放位置不同：cookie数据存放在客户的浏览器上，session数据放在服务器上。
+    1、数据存放位置不同：cookie数据存放在客户的浏览器上，session数据放在服务器上。
 
-    2. 安全程度不同：cookie不是很安全，别人可以分析存放在本地的COOKIE并进行COOKIE欺骗,考虑到安全应当使用session。
+    2、安全程度不同：cookie不是很安全，别人可以分析存放在本地的COOKIE并进行COOKIE欺骗,考虑到安全应当使用session。
 
-    3. 性能使用程度不同：session会在一定时间内保存在服务器上。当访问增多，会比较占用你服务器的性能,考虑到减轻服务器性能方面，应当使用cookie。
+    3、性能使用程度不同：session会在一定时间内保存在服务器上。当访问增多，会比较占用你服务器的性能,考虑到减轻服务器性能方面，应当使用cookie。
 
-    4. 数据存储大小不同：单个cookie保存的数据不能超过4K，很多浏览器都限制一个站点最多保存20个cookie，而session则存储与服务端，浏览器对其没有限制。
-    5. 会话机制不同
-       session会话机制：session会话机制是一种服务器端机制，它使用类似于哈希表(可能还有哈希表)的结构来保存信息。
+    4、数据存储大小不同：单个cookie保存的数据不能超过4K，很多浏览器都限制一个站点最多保存20个cookie，而session则存储与服务端，浏览器对其没有限制。
+    5、会话机制不同
+    session会话机制：session会话机制是一种服务器端机制，它使用类似于哈希表(可能还有哈希表)的结构来保存信息。
 
     cookies会话机制：cookie是服务器存储在本地计算机上的小块文本，并随每个请求发送到同一服务器。 Web服务器使用HTTP标头将cookie发送到客户端。在客户端终端，浏览器解析cookie并将其保存为本地文件，该文件自动将来自同一服务器的任何请求绑定到这些cookie。
 
@@ -18080,29 +18075,30 @@ linux对于文件描述符的限制有3个级别
 
 1. 请说说socket网络编程的步骤。⭐⭐⭐⭐
 
-   1. 服务器根据地址类型( ipv4, ipv6 )、 socket 类型、协议创建 socket
+   (1)服务器根据地址类型( ipv4, ipv6 )、 socket 类型、协议创建 socket。
 
-   2. 服务器为 socket 绑定 IP 地址和端口号
+   (2)服务器为 socket 绑定 IP 地址和端口号。
 
-   3. 服务器 socket 监听端口号请求，随时准备接收客户端发来的连接，这时候服务器的socket 并没有被打开
+   (3)服务器 socket 监听端口号请求，随时准备接收客户端发来的连接，这时候服务器的socket 并没有被打开 。
 
-   4. 客户端创建 socket
+   (4)客户端创建 socket。
 
-   5. 客户端打开 socket，根据服务器 IP 地址和端口号试图连接服务器 socket
+   (5)客户端打开 socket，根据服务器 IP 地址和端口号试图连接服务器 socket。
 
-   6. 服务器 socket 接收到客户端 socket 请求，被动打开，开始接收客户端请求，直到客户端返回连接信息 。这时候 socket 进入阻塞状态，所谓阻塞即accept()方法一直到客户端返回连接信息后才返回，开始接收下一个客户端连接请求
+   (6)服务器 socket 接收到客户端 socket 请求，被动打开，开始接收客户端请求，直到客户端返回连接信息 。这时候 socket 进入阻塞状态，所谓阻塞即accept()方法一直到客户端返回连接信息后才返回，开始接收下一个客户端连接请求 。
 
-   7. 客户端连接成功，向服务器发送连接状态信息
+   (7)客户端连接成功，向服务器发送连接状态信息 。
 
-   8. 服务器 accept 方法返回，连接成功
-   8. 客户端向 socket 写入信息
-   
-   10. 服务器读取信息
-   
-   11. 客户端关闭
-   
-   12. 服务器端关闭
-   
+   (8)服务器 accept 方法返回，连接成功 。
+
+   (9)客户端向 socket 写入信息 。
+
+   (10)服务器读取信息 。
+
+   (11)客户端关闭 。
+
+   (12)服务器端关闭 。
+
 2. 请说说socket网络编程的接口。⭐⭐⭐⭐
 
    1. socket函数创建接口
@@ -18362,25 +18358,25 @@ linux对于文件描述符的限制有3个级别
 
 10. 说说ROM和RAM的区别⭐⭐⭐⭐⭐
 
-    | 存储器类型 |                          简介                          |                             作用                             |
-    | :--------: | :----------------------------------------------------: | :----------------------------------------------------------: |
-    |    ROM     |              只读存储器(Read-Only Memory)              | 是一种只能读出事先所存数据的固态半导体存储器。其特性是一旦储存资料就无法再将之改变或删除。 |
-    |    RAM     | 随机存取存储器(random access memory)又称作“随机存储器” | 是与CPU直接交换数据的内部存储器，也叫主存(内存)。它可以随时读写，而且速度很快。 |
+    | 存储器类型 | 简介                                                   | 作用                                                         |
+    | ---------- | ------------------------------------------------------ | ------------------------------------------------------------ |
+    | ROM        | 只读存储器(Read-Only Memory)                           | 是一种只能读出事先所存数据的固态半导体存储器。其特性是一旦储存资料就无法再将之改变或删除。 |
+    | RAM        | 随机存取存储器(random access memory)又称作“随机存储器” | 是与CPU直接交换数据的内部存储器，也叫主存(内存)。它可以随时读写，而且速度很快。 |
 
 11. 说说你了解有哪些存储器类型⭐⭐⭐⭐
 
-    | 存储器类型 |                             简介                             |                             作用                             |
-    | :--------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
-    |    ROM     |                 只读存储器(Read-Only Memory)                 | 是一种只能读出事先所存数据的固态半导体存储器。其特性是一旦储存资料就无法再将之改变或删除。 |
-    |    RAM     |    随机存取存储器(random access memory)又称作“随机存储器”    | 是与CPU直接交换数据的内部存储器，也叫主存(内存)。它可以随时读写，而且速度很快。 |
-    |    SRAM    |       静态随机存取存储器(Static Random-Access Memory)        | 随机存取存储器的一种。所谓的“静态”，是指这种存储器只要保持通电，里面储存的数据就可以恒常保持。然而，当电力供应停止时，SRAM储存的数据还是会消失。 |
-    |    DRAM    |                   动态随机存取存储器(DRAM)                   | DRAM里面所储存的数据就需要周期性地更新。要刷新充电一次，否则内部的数据即会消失。 |
-    |   EPROM    |         (Erasable Programmable ROM)，可擦除可编程ROM         | 芯片通过紫外线可重复擦除和写入,解决了PROM芯片只能写入一次的弊端。EPROM芯片在写入资料后,还要以不透光的贴纸或胶布把窗口封住,以免受到周围的紫外线照射而使资料受损。使用并不方便。 |
-    |   PSRAM    | 全称Pseudo static random access memory。指的是伪静态随机存储器。 | 内部的内存颗粒跟SDRAM的颗粒相似，但外部的接口跟SDRAM不同，不需要SDRAM那样复杂的控制器和刷新机制，PSRAM的接口跟SRAM的接口是一样的。PSRAM 内部自带刷新机制。 |
-    |   EEPROM   | (electrically erasable, programmable, read-only )是一种电可擦除可编程只读存储器 | 其内容在掉电的时候也不会丢失。在平常情况下，EEPROM与EPROM一样是只读的，需要写入时，在指定的引脚加 上一个高电压即可写入或擦除，而且其擦除的速度极快 |
-    |   Flash    |                        非易失闪存技术                        | 它的主要特点是在不加电的情况下能长期保持存储的信息。就其本质而言，Flash Memory属于EEPROM(电擦除可编程只读存储器)类型。它既有ROM的特点，又有很高的存取速度，而且易于擦除和重写，功耗很小。 |
-    | NOR Flash  |                              -                               | NOR Flash的特点是芯片内执行(XIP, eXecute In Place)，这样应用程序可以直接在flash闪存内运行，不必再把代码读到系统RAM中。NOR Flash的传输效率很高，在1～4MB的小容量时具有很高的成本效益，但是很低的写入和擦除速度大大影响了它的性能。 |
-    | NAND Flash |                              -                               | NAND Flash结构能提供极高的单元密度，可以达到高存储密度，并且写入和擦除的速度也很快。应用NAND Flash的困难在于flash的管理需要特殊的系统接口。 |
+    | 存储器类型 | 简介                                                         | 作用                                                         |
+    | ---------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+    | ROM        | 只读存储器(Read-Only Memory)                                 | 是一种只能读出事先所存数据的固态半导体存储器。其特性是一旦储存资料就无法再将之改变或删除。 |
+    | RAM        | 随机存取存储器(random access memory)又称作“随机存储器”       | 是与CPU直接交换数据的内部存储器，也叫主存(内存)。它可以随时读写，而且速度很快。 |
+    | SRAM       | 静态随机存取存储器(Static Random-Access Memory)              | 随机存取存储器的一种。所谓的“静态”，是指这种存储器只要保持通电，里面储存的数据就可以恒常保持。然而，当电力供应停止时，SRAM储存的数据还是会消失。 |
+    | DRAM       | 动态随机存取存储器(DRAM)                                     | DRAM里面所储存的数据就需要周期性地更新。要刷新充电一次，否则内部的数据即会消失。 |
+    | EPROM      | (Erasable Programmable ROM)，可擦除可编程ROM                 | 芯片通过紫外线可重复擦除和写入,解决了PROM芯片只能写入一次的弊端。EPROM芯片在写入资料后,还要以不透光的贴纸或胶布把窗口封住,以免受到周围的紫外线照射而使资料受损。使用并不方便。 |
+    | PSRAM      | 全称Pseudo static random access memory。指的是伪静态随机存储器。 | 内部的内存颗粒跟SDRAM的颗粒相似，但外部的接口跟SDRAM不同，不需要SDRAM那样复杂的控制器和刷新机制，PSRAM的接口跟SRAM的接口是一样的。PSRAM 内部自带刷新机制。 |
+    | EEPROM     | (electrically erasable, programmable, read-only )是一种电可擦除可编程只读存储器 | 其内容在掉电的时候也不会丢失。在平常情况下，EEPROM与EPROM一样是只读的，需要写入时，在指定的引脚加 上一个高电压即可写入或擦除，而且其擦除的速度极快 |
+    | Flash      | 非易失闪存技术                                               | 它的主要特点是在不加电的情况下能长期保持存储的信息。就其本质而言，Flash Memory属于EEPROM(电擦除可编程只读存储器)类型。它既有ROM的特点，又有很高的存取速度，而且易于擦除和重写，功耗很小。 |
+    | NOR Flash  | -                                                            | NOR Flash的特点是芯片内执行(XIP, eXecute In Place)，这样应用程序可以直接在flash闪存内运行，不必再把代码读到系统RAM中。NOR Flash的传输效率很高，在1～4MB的小容量时具有很高的成本效益，但是很低的写入和擦除速度大大影响了它的性能。 |
+    | NAND Flash | -                                                            | NAND Flash结构能提供极高的单元密度，可以达到高存储密度，并且写入和擦除的速度也很快。应用NAND Flash的困难在于flash的管理需要特殊的系统接口。 |
 
 12. 说说你了解有哪些嵌入式操作系统，各自有什么特点？⭐⭐⭐
 
@@ -18392,11 +18388,11 @@ linux对于文件描述符的限制有3个级别
 
        VxWorks操作系统是美国WindRiver公司于1983年设计开发的一种嵌入式实时操作系统(RTOS)，VxWorks具有以下优点。
 
-       1. 实时性好。
+       (1)实时性好。
 
-       2. 可靠性高
+       (2)可靠性高
 
-       3. 集成开发环境完备
+       (3)集成开发环境完备
 
        但是，由于VxWorks源码不公开，它部分功能的更新(如网络功能模块)滞后。VxWorks的开发和使用都需要交高额的专利费，这就大大增加了用户开发的成本。
 
@@ -19625,11 +19621,11 @@ linux对于文件描述符的限制有3个级别
 
     在C++中，容器map和set都是用红黑树实现的，但是两者也有区别，具体如下：
 
-    1. map：经过排序了的二元组的集合，map中的每个元素都是由两个值组成，其中的key(键值，一个map中的**键值必须是唯一的**) 是在排序或搜索时使用，它的值可以在容器中重新获取；而另一个值是该元素关联的数值。
+    (1)map：经过排序了的二元组的集合，map中的每个元素都是由两个值组成，其中的key(键值，一个map中的**键值必须是唯一的**) 是在排序或搜索时使用，它的值可以在容器中重新获取；而另一个值是该元素关联的数值。
 
-    2. set：包含了经过排序了的数据，这些数据的**值(value)必须是唯一的**。和 map容器不同，使用 set 容器存储的各个键值对，要求键 key 和值 value 必须相等。所以我们可以认为set就是**元素的集合**，如 {'a','b','c'} 。
+    (2)set：包含了经过排序了的数据，这些数据的**值(value)必须是唯一的**。和 map容器不同，使用 set 容器存储的各个键值对，要求键 key 和值 value 必须相等。所以我们可以认为set就是**元素的集合**，如 {'a','b','c'} 。
 
-    3. map和set的底层实现机制：**红黑树**(RB-Tree)。
+    (3)map和set的底层实现机制：**红黑树**(RB-Tree)。
 
 #### Part3
 
@@ -19644,10 +19640,9 @@ linux对于文件描述符的限制有3个级别
 
    暴力解法有很多重复计算，动态规划就是为了帮助我们减少重复计算，所以动态规划**提前存储前面计算的值，后面的值来源于已经存储的值，或者只需要在已经存储的值的基础上简单的叠加，这就是动态规划的本质，空间换时间**。
    三个非常重要的领悟：
-
-   1. 动态规划应用于存在重复子结构的问题中，避免重复计算法
-   2. 动态规划空间换时间
-   3. 动态规划提前存储前面计算的值，后面的值来源于已经存储的值，或者只需要在已经存储的值的基础上简单的叠加
+   1、动态规划应用于存在重复子结构的问题中，避免重复计算法
+   2、动态规划空间换时间
+   3、动态规划提前存储前面计算的值，后面的值来源于已经存储的值，或者只需要在已经存储的值的基础上简单的叠加
 
 3. 手撕归并排序，说说原理⭐⭐⭐⭐⭐
 
@@ -19844,9 +19839,9 @@ linux对于文件描述符的限制有3个级别
 
     1. 深度优先搜索的步骤分为
 
-       1. 递归下去
+       (1)递归下去
 
-       2. 回溯上来。
+       (2)回溯上来。
 
        顾名思义，深度优先，则是以深度为准则，先一条路走到底，直到达到目标。这里称之为递归下去。
 
@@ -19939,27 +19934,27 @@ linux对于文件描述符的限制有3个级别
 
 7. 引起慢查询的常见原因及一些解决方案⭐⭐⭐⭐⭐
 
-   1. 没有索引或者没有用到索引(这是查询慢最常见的问题，是程序设计的缺陷)
+   (1)没有索引或者没有用到索引(这是查询慢最常见的问题，是程序设计的缺陷)
 
-   2. 锁或者死锁(这也是查询慢最常见的问题，是程序设计的缺陷)
+   (2)锁或者死锁(这也是查询慢最常见的问题，是程序设计的缺陷)
 
-   3. 查询语句不好，没有优化
+   (3)查询语句不好，没有优化
 
-   4. 网络速度慢
+   (4)网络速度慢
 
-   5. 内存不足
+   (5)内存不足
 
    解决方案：
 
-   1. 根据查询条件,建立索引,优化 索引、优化访问方式
+   (1)根据查询条件,建立索引,优化 索引、优化访问方式
 
-   2. 优化锁。可以使用乐观锁、读写锁
+   (2)优化锁。可以使用乐观锁、读写锁
 
-   3. 优化查询语句
+   (3)优化查询语句
 
-   4. 提升网络速度
+   (4)提升网络速度
 
-   5. 扩大服务器内存
+   (5)扩大服务器内存
 
 8. 聚簇索引与非聚簇索引⭐⭐⭐⭐⭐
 
